Iniciand heroku de prueba

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
+<h1 class="title" style="display:none">
   {{title}}
 </h1>
+<hr>
+<app-fruta></app-fruta>
+<app-empleado></app-empleado>
+
+<button (click)="toggleTitle()">Mostar Título</button>
